--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Etch a Sketch</h1>
+    <div id="wrapper"></div>
     <div id="container"></div>
     <script src="javascript.js"></script>
 </body>
