i fixed the square sizing wrongly. i used the wrong logic for creating the size for the square. everything else was easier.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <h1>Etch a Sketch</h1>
-    <div id="wrapper"></div>
+    <div id="btn-container">
+        <button id="reset" class="buttons">Reset</button>
+        <button id="new-grid" class="buttons">New Grid</button>
+    </div>
     <div id="container"></div>
     <script src="javascript.js"></script>
 </body>
